--- a/css/style.css
+++ b/css/style.css
@@ -5473,12 +5473,16 @@ header .idiomas {
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 10px;
     border-radius: 4px;
-    width: 30px;
+    width: 100px;
     height: 30px;
     background-color: #fff;
     color: var(--txt_cta_lightblue);
     font-size: 20px;
+  }
+  .c_defectos_visuales .btn_menu_dv div {
+    font-weight: 700;
   }
 
   .items_btn_dv {
