--- a/css/style.css
+++ b/css/style.css
@@ -4618,6 +4618,101 @@ summary {
   background-color: #F4F4F4;
 }
 
+.cont_header_vc {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  gap: 60px;
+}
+.cont_header_vc .containerSliderVC {
+  position: relative;
+  padding: 0 20px;
+  box-sizing: border-box;
+  max-width: 500px;
+}
+.cont_header_vc .swiper {
+  border-radius: 6px;
+}
+.cont_header_vc .swiper-button-next, .cont_header_vc .swiper-button-prev {
+  top: 50%;
+}
+
+.txt_header_vc h4 {
+  font-size: 20px;
+  text-transform: uppercase;
+  color: var(--color_pri);
+}
+.txt_header_vc p {
+  padding: 0 0 20px;
+}
+
+.s_container_tabs_VC {
+  background: #FFF;
+}
+.s_container_tabs_VC .sub_container_header {
+  display: grid;
+  grid-template-columns: 1fr 1.4fr;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+}
+.s_container_tabs_VC picture {
+  display: inline-block;
+}
+.s_container_tabs_VC picture img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.content_subscontainer {
+  padding: 40px 0;
+  box-sizing: border-box;
+}
+.content_subscontainer .tit_section {
+  font-size: 24px;
+}
+
+.mod_VC {
+  background: transparent;
+  position: relative;
+  z-index: 1;
+}
+.mod_VC .pest_top {
+  border: 1px solid transparent;
+}
+.mod_VC .pest_top.active {
+  border: 1px solid #CCCCCC;
+  border-bottom: 1px solid #FFF;
+}
+
+.subcontain_CV {
+  padding: 50px;
+  box-sizing: border-box;
+  border: 1px solid #CCCCCC;
+  transform: translateY(-1px);
+  border-radius: 8px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 30px;
+  align-items: center;
+}
+.subcontain_CV picture {
+  display: inline-block;
+  border-radius: 8px;
+  overflow: hidden;
+  max-height: 254px;
+  height: 100%;
+  width: 100%;
+}
+.subcontain_CV picture img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 /* ESTILOS INTERNA FARMACIA OFTALMOLOGICA */
 .s_header_farmacia {
   background: url("../images/diseno/21-farmacia/img_header.jpg") no-repeat center;
@@ -4969,6 +5064,24 @@ header .idiomas {
 
   .row_nota {
     gap: 30px;
+  }
+
+  .cont_header_vc {
+    grid-template-columns: 1fr;
+  }
+
+  .cont_header_vc .containerSliderVC {
+    max-width: 670px;
+    width: 100%;
+    margin: auto;
+  }
+
+  .txt_header_vc {
+    text-align: center;
+  }
+
+  .txt_header_vc {
+    text-align: left;
   }
 }
 @media screen and (max-width: 768px) {
@@ -5542,6 +5655,18 @@ header .idiomas {
   .c_header_farmacia {
     grid-template-columns: 1fr;
   }
+
+  .cont_header_vc .containerSliderVC {
+    max-width: 400px;
+  }
+
+  .s_container_tabs_VC .sub_container_header {
+    grid-template-columns: 1fr;
+  }
+
+  .subcontain_CV {
+    grid-template-columns: 1fr;
+  }
 }
 @media screen and (max-width: 480px) {
   header .header_nav {
@@ -5832,6 +5957,14 @@ header .idiomas {
 
   .s_mision_vision .desc_mision_vision {
     padding: 0 20px;
+  }
+
+  .cont_header_vc .containerSliderVC {
+    max-width: 340px;
+  }
+
+  .subcontain_CV {
+    padding: 20px;
   }
 }
 @media screen and (max-width: 390px) {
