--- a/sass/style.scss
+++ b/sass/style.scss
@@ -174,6 +174,7 @@ h1 {
 	position: relative;
 	overflow: hidden;
 	box-sizing: border-box;
+
 	&.social1 {
 		border-radius: 100px;
 		display: flex;
@@ -248,6 +249,7 @@ h1 {
 	&.lightblue {
 		background-color: var(--bg_cta_lightblue);
 		color: var(--txt_cta_light);
+		display: inline-block;
 	}
 	&.light {
 		background-color: var(--bg_cta_light);
@@ -3151,7 +3153,7 @@ button[type="submit"] {
 
 .item_info_procedimientos {
 	display: grid;
-	grid-template-columns: 1.5fr 2fr;
+	grid-template-columns: 300px 2fr;
 	gap: 30px;
 	align-items: stretch;
 	margin: 40px 0;
@@ -3159,13 +3161,18 @@ button[type="submit"] {
 		border-radius: 4px;
 		overflow: hidden;
 		display: inline-block;
-		max-height: 300px;
+
 	}
 	.subtit_proce {
 		display: flex;
 		align-items: center;
 		gap: 10px;
 		align-self: flex-start;
+		max-width: 390px;
+		span{
+			font-size: 20px;
+			color: var(--color_pri);
+		}
 		h4 {
 			color: var(--txt_cta_lightblue);
 			font-size: 24px;
@@ -3212,6 +3219,24 @@ button[type="submit"] {
 				text-align: center;
 				font-size: 15px;
 			}
+		}
+		ul{
+			margin: 0;
+			li{
+				list-style: none;
+				position: relative;
+				margin: 0 0 20px;
+				&::before{
+					content: '';
+					position: absolute;
+					top: 1px;
+					left: -26px;
+					background: url("../images/diseno/19-defectos-visuales/bullets.svg") no-repeat center;
+					background-size: contain;
+					width: 16px;
+					height: 16px;
+				}
+			}	
 		}
 	}
 }
@@ -4755,10 +4780,83 @@ summary {
 }
 
 
+/* ESTILOS INTERNA DEFECTOS VISUALES */
 
 
 
+.s_banner_tratamiento_fondo{
+	background: url('../images/diseno/19-defectos-visuales/bg.jpg') no-repeat center;
+	background-size: cover;
+	padding: 40px 0;
+	box-sizing: border-box;
+	h3{
+		margin: 0 0 20px;
+		display: flex;
+		gap: 10px;
+		align-items: flex-start;
+		span{
+			color: var(--color_pri);
+		}
+	}
+	.cb_tratamiento_fondo{
+		display: grid;
+		grid-template-columns: 1fr 3fr;
+		gap: 30px;
+		padding: 60px 0;
+		box-sizing: border-box;
+	}
+	.cont_buttons{
+		margin: 30px 0 0;
+		display: flex;
+		align-items: center;
+		gap: 20px;
+		a{
+			display: inline-block;
+		}
+	}
+}
 
+.bg_none{
+	background-color: transparent;
+}
+
+.bg_white{
+	background-color: #FFF;
+}
+
+.int_vc{
+	.cont_pest_top{
+
+		.pest_top{
+			background-color: transparent;
+			border-radius: 0;
+			&:nth-child(1n+2){
+				border-left: 1px solid #a7a7a7;
+				
+			}
+		}
+	}
+}
+
+
+
+.mt_10{
+	margin: 10px 0 0;
+}
+.mt_20{
+	margin: 20px 0 0;
+}
+
+.cont_doble_picture{
+	display: flex;
+	align-items: center;
+	gap: 20px;
+	img{
+		height: 100%;
+		object-fit: cover;
+		border-radius: 8px;
+	}
+}
 
 
 
@@ -4997,6 +5095,18 @@ RESPONSIVE DESIGN
 	}
 	.txt_header_vc{
 		text-align: left;
+	}
+	.cont_doble_picture{
+		flex-direction: column;
+		
+			img{
+				width: 100%;
+				height: initial;
+			}
+		
+	}
+	.item_info_procedimientos{
+		grid-template-columns: 1fr;
 	}
 }
 @media screen and (max-width: 768px) {
@@ -5472,6 +5582,9 @@ RESPONSIVE DESIGN
 	}
 	.subcontain_CV{
 		grid-template-columns: 1fr;
+	}
+	.s_banner_tratamiento_fondo .cont_buttons{
+		flex-direction: column;
 	}
 }
 @media screen and (max-width: 480px) {
