--- a/css/style.css
+++ b/css/style.css
@@ -3883,7 +3883,7 @@ button[type=submit] {
 /* ESTILOS INTERNA RESERVA */
 .s_reserva {
   background-color: #f4f4f4;
-  padding: 0 0 80px;
+  padding: 0 0 30px;
   box-sizing: border-box;
 }
 
@@ -4889,6 +4889,20 @@ summary {
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 8px;
+}
+
+.c_otros_tratamientos .c_icon_equipos {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  align-items: center;
+  justify-items: center;
+  justify-content: center;
+  gap: 30px;
+  padding: 30px 0;
+  width: 100%;
+}
+.c_otros_tratamientos .c_icon_equipos a {
+  width: 20%;
 }
 
 /* ************
